# harvey

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  harvey.yaml  pyproject.toml  requirements.txt
harvey/: __init__.py  __main__.py  brain.py  cli.py  config.py  dashboard.py  main.py  setup.py  state.py  trainer.py
harvey/agents/: analyst.py  handler.py  scout.py  sender.py  writer.py
harvey/integrations/: calendar.py  email_finder.py  instantly.py  linkedin.py
harvey/models/: campaign.py  company.py  conversation.py  prospect.py
prompts/: handler.md  qualifier.md  scout.md  system.md  writer.md
skills/: README.md  account_navigation.md  email_frameworks.md  lead_qualification.md  linkedin_outreach.md  objection_handling.md  offer_strategy.md  prospecting_tactics.md  sales_methodology.md
tests/: test_config.py  test_models.py  test_state.py
