[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "harvey"
version = "0.1.0"
description = "Autonomous AI sales agent. Always Be Closing."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "dnspython>=2.4",
    "aiosmtplib>=3.0",
    "aiosqlite>=0.19",
    "pydantic>=2.5",
    "pytz>=2024.1",
]

[project.scripts]
harvey = "harvey.cli:main"

[tool.setuptools.packages.find]
include = ["harvey*"]
